# RayTracer

./: CMakeLists.txt  Doxyfile  Makefile  README.md
examples/: example1.cpp
src/: Camera.h  Material.h  Ray.cpp  Vector3D.cpp  Vector3D.h  main.cpp
src/environment/: Camera.cpp  Camera.h  Light.cpp  Light.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h
src/exceptions/: exceptions.h
src/include/: environment.h  objects.h  utils.h
src/lib/json/doc/examples/: object.cpp
src/objects/: Cube.cpp  Cube.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h
src/ui/: CommandLineInterface.cpp  CommandLineInterface.h
src/utils/: Color.cpp  Color.h  Material.cpp  Material.h  MathTools.cpp  MathTools.h  Serializable.cpp  Serializable.h  Vector3D.cpp  Vector3D.h
